--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Personal Website</h1>
+        <h1>Welcome to Ella's Personal Website</h1>
     </header>
 
     <nav class="w3-bar w3-border">
@@ -115,17 +115,17 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>Hello! I'm a passionate web developer and a creative thinker. I enjoy learning new technologies and building projects that solve real-world problems. Welcome to my personal website!</p>
+        <p>Hello! I'm a passionate GBDA student at the University of Waterloo and a creative thinker. I enjoy learning new design concepts and building projects that solve real-world problems. Welcome to my personal website!</p>
     </section>
 
     <section id="hobbies">
         <h2>Hobbies</h2>
         <p>In my free time, I enjoy:</p>
         <ul>
-            <li>Photography</li>
-            <li>Hiking</li>
-            <li>Reading Sci-Fi Novels</li>
-            <li>Exploring new tech gadgets</li>
+            <li>Dancing</li>
+            <li>Video editing</li>
+            <li>Reading fictional novels</li>
+            <li>Sleeping!</li>
         </ul>
     </section>
 
@@ -144,8 +144,8 @@
                     <td><a href="https://github.com">Visit</a></td>
                 </tr>
                 <tr>
-                    <td>Weather App</td>
-                    <td>A simple app that provides weather updates.</td>
+                    <td>Moodbloom</td>
+                    <td>A simple app that tracks your mood</td>
                     <td><a href="https://openweathermap.org">Visit</a></td>
                 </tr>
             </table>
