--- a/index.html
+++ b/index.html
@@ -115,11 +115,13 @@
 
     <section id="about">
         <h2>About Me</h2>
+        <img src="about-me.jpg" alt="A photo of me">
         <p>Hello! I'm a passionate GBDA student at the University of Waterloo and a creative thinker. I enjoy learning new design concepts and building projects that solve real-world problems. Welcome to my personal website!</p>
     </section>
 
     <section id="hobbies">
         <h2>Hobbies</h2>
+        <img src="hobbies.jpg" alt="Image representing hobbies">
         <p>In my free time, I enjoy:</p>
         <ul>
             <li>Dancing</li>
@@ -131,6 +133,7 @@
 
     <section id="projects">
         <h2>Projects</h2>
+        <img src="projects.jpg" alt="Image representing projects">
         <div class="w3-responsive">
             <table class="w3-table-all">
                 <tr>
@@ -154,7 +157,8 @@
 
     <section id="contact">
         <h2>Contact Me</h2>
-        <p>If you'd like to get in touch, feel free to send me an email: <a href="mailto:your_email@uwaterloo.ca">your_email@uwaterloo.ca</a></p>
+        <img src="contact.jpg" alt="Contact icon">
+        <p>If you'd like to get in touch, feel free to send me an email: <a href="mailto:your_email@uwaterloo.ca">e225li@uwaterloo.ca</a></p>
     </section>
 
     <footer>
