--- a/index.html
+++ b/index.html
@@ -87,6 +87,15 @@
         .w3-table-all tr:nth-child(even) {
             background: #f8f9fa;
         }
+      
+        img {
+            width: 100%;
+            max-width: 200px;
+            height: 200px;
+            display: block;
+            margin: 1rem 0 1rem 0;
+            border-radius: 10px;
+        }
 
         footer {
             background: linear-gradient(90deg, #007bff, #00bcd4);
