--- a/index.html
+++ b/index.html
@@ -89,9 +89,6 @@
         }
       
         img {
-            width: 100%;
-            max-width: 200px;
-            height: 200px;
             display: block;
             margin: 1rem 0 1rem 0;
             border-radius: 10px;
@@ -124,13 +121,13 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <img src="about-me.jpg" alt="A photo of me">
+        <img src="about-me.jpg" alt="A photo of me" style="width: 450px; height: 300px;">
         <p>Hello! I'm a passionate GBDA student at the University of Waterloo and a creative thinker. I enjoy learning new design concepts and building projects that solve real-world problems. Welcome to my personal website!</p>
     </section>
 
     <section id="hobbies">
         <h2>Hobbies</h2>
-        <img src="hobbies.jpg" alt="Image representing hobbies">
+        <img src="hobbies.jpg" alt="Image representing hobbies" style="width: 200px; height: 300px;">
         <p>In my free time, I enjoy:</p>
         <ul>
             <li>Dancing</li>
@@ -166,7 +163,7 @@
 
     <section id="contact">
         <h2>Contact Me</h2>
-        <img src="contact.jpg" alt="Contact icon">
+        <img src="contact.jpg" alt="Contact icon" style="width: 200px; height: 200px;">
         <p>If you'd like to get in touch, feel free to send me an email: <a href="mailto:your_email@uwaterloo.ca">e225li@uwaterloo.ca</a></p>
     </section>
 
