--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
                     <th>Link</th>
                 </tr>
                 <tr>
-                    <td>Portfolio Website</td>
-                    <td>A personal portfolio showcasing my work.</td>
+                    <td>What Kind of Fool Am I</td>
+                    <td>A self-choreographed solo</td>
                     <td><a href="https://github.com">Visit</a></td>
                 </tr>
                 <tr>
