--- a/index.html
+++ b/index.html
@@ -138,28 +138,30 @@
     </section>
 
     <section id="projects">
-        <h2>Projects</h2>
-        <img src="projects.jpg" alt="Image representing projects">
-        <div class="w3-responsive">
-            <table class="w3-table-all">
-                <tr>
-                    <th>Project Name</th>
-                    <th>Description</th>
-                    <th>Link</th>
-                </tr>
-                <tr>
-                    <td>What Kind of Fool Am I</td>
-                    <td>A self-choreographed solo</td>
-                    <td><a href="https://github.com">Visit</a></td>
-                </tr>
-                <tr>
-                    <td>Moodbloom</td>
-                    <td>A simple app that tracks your mood</td>
-                    <td><a href="https://openweathermap.org">Visit</a></td>
-                </tr>
-            </table>
-        </div>
-    </section>
+    <h2>Projects</h2>
+    <div class="w3-responsive">
+        <table class="w3-table-all">
+            <tr>
+                <th>Image</th>
+                <th>Project Name</th>
+                <th>Description</th>
+                <th>Link</th>
+            </tr>
+            <tr>
+                <td><img src="project1.jpg" alt="Image of What Kind of Fool Am I" style="width: 150px; height: 100px;"></td>
+                <td>What Kind of Fool Am I</td>
+                <td>A self-choreographed solo</td>
+                <td><a href="https://github.com">Visit</a></td>
+            </tr>
+            <tr>
+                <td><img src="project2.jpg" alt="Image of Moodbloom" style="width: 150px; height: 100px;"></td>
+                <td>Moodbloom</td>
+                <td>A simple app that tracks your mood</td>
+                <td><a href="https://openweathermap.org">Visit</a></td>
+            </tr>
+        </table>
+    </div>
+</section>
 
     <section id="contact">
         <h2>Contact Me</h2>
