--- a/index.html
+++ b/index.html
@@ -151,13 +151,13 @@
                 <td><img src="project1.jpg" alt="Image of What Kind of Fool Am I" style="width: 150px; height: 100px;"></td>
                 <td>What Kind of Fool Am I</td>
                 <td>A self-choreographed solo</td>
-                <td><a href="https://github.com">Visit</a></td>
+                <td><a href="https://youtu.be/nr6c-ypJx_w">Visit</a></td>
             </tr>
             <tr>
                 <td><img src="project2.jpg" alt="Image of Moodbloom" style="width: 150px; height: 100px;"></td>
                 <td>Moodbloom</td>
                 <td>A simple app that tracks your mood</td>
-                <td><a href="https://openweathermap.org">Visit</a></td>
+                <td><a href="https://www.figma.com/design/wYklmzNcksPWUzWinRUMZI/Li_Ella_M3?node-id=0-1&t=xtnZGUugjgjGLjCh-1">Visit</a></td>
             </tr>
         </table>
     </div>
