--- a/index.html
+++ b/index.html
@@ -23,10 +23,13 @@
         }
 
         header h1 {
+            font-family: 'Orbitron', sans-serif;
             font-size: 3rem;
             margin: 0;
-            text-shadow: 2px 2px #000;
+            font-weight: 700; /* Boldest weight for Orbitron */
+            text-shadow: 3px 3px #000;
         }
+
 
         nav {
             position: sticky;
@@ -66,10 +69,12 @@
         }
 
         section h2 {
+            font-family: 'Orbitron', sans-serif;
             color: #ff00ff;
-            font-size: 2rem;
+            font-size: 2.2rem; /* Slightly larger for emphasis */
             margin-bottom: 1rem;
-            text-shadow: 2px 2px #000;
+            font-weight: 700; /* Boldest weight for Orbitron */
+            text-shadow: 3px 3px #000;
         }
 
         ul {
@@ -124,6 +129,8 @@
             font-family: 'Press Start 2P';
             src: url('https://fonts.gstatic.com/s/pressstart2p/v12/e3t4euO8V5UmzJVzZPZsZnF1Q8jEMtyvq-o.woff2') format('woff2');
         }
+
+        @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap');
     </style>
 </head>
 <body>
@@ -141,7 +148,7 @@
     <section id="about">
         <h2>About Me</h2>
         <img src="about-me.jpg" alt="A photo of me" style="width: 450px; height: 300px;">
-        <p>Welcome to my game-themed portal! I'm Ella, a passionate creator who loves blending technology and creativity. Let's explore!</p>
+        <p>Welcome to my game-themed portal! I'm Ella, a passionate creator who loves doing passion projects and creativity. Let's explore!</p>
     </section>
 
     <section id="hobbies">
@@ -149,10 +156,10 @@
         <img src="hobbies.jpg" alt="Image representing hobbies" style="width: 200px; height: 300px;">
         <p>When I'm not gaming, I enjoy:</p>
         <ul>
-            <li>Pixel art design</li>
-            <li>Level editing</li>
-            <li>Playing retro games</li>
-            <li>Exploring game lore!</li>
+            <li>Designing</li>
+            <li>Video editing</li>
+            <li>Playing video games</li>
+            <li>Dancing!</li>
         </ul>
     </section>
 
@@ -175,7 +182,7 @@
                 <tr>
                     <td><img src="project2.jpg" alt="Moodbloom" style="width: 150px; height: 100px;"></td>
                     <td>Moodbloom</td>
-                    <td>An 8-bit app to track your mood levels</td>
+                    <td>A mood-tracking app to track your mood levels</td>
                     <td><a href="https://www.figma.com/design/wYklmzNcksPWUzWinRUMZI/Li_Ella_M3?node-id=0-1&t=xtnZGUugjgjGLjCh-1" style="color: #ff00ff;">Visit</a></td>
                 </tr>
             </table>
