--- a/index.html
+++ b/index.html
@@ -3,40 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ella's Game Portal</title>
+    <title>Ella's Cat Portal</title>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <style>
         body {
-            font-family: 'Press Start 2P', cursive;
-            background-color: #000;
-            color: #0ff;
+            font-family: 'Poppins', sans-serif;
+            background-color: #f4f1f1; /* Soft off-white background */
+            color: #4a3f35; /* Warm brown text color */
             margin: 0;
             padding: 0;
         }
 
         header {
-            background: linear-gradient(90deg, #ff00ff, #00ffff);
-            color: white;
+            background: linear-gradient(90deg, #f5b5d0, #f2c5b3); /* Soft pink to beige gradient */
+            color: #4a3f35; /* Dark brown for text */
             text-align: center;
-            padding: 2rem 0;
-            border-bottom: 5px solid #0ff;
+            padding: 3rem 0;
+            border-bottom: 5px solid #f5b5d0; /* Soft pink border */
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
         header h1 {
-            font-family: 'Orbitron', sans-serif;
-            font-size: 3rem;
+            font-family: 'Lora', serif;
+            font-size: 3.5rem;
             margin: 0;
-            font-weight: 700; /* Boldest weight for Orbitron */
-            text-shadow: 3px 3px #000;
+            font-weight: 700;
+            color: #4a3f35;
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
         }
-
 
         nav {
             position: sticky;
             top: 0;
             z-index: 1000;
-            background: #111;
-            box-shadow: 0 5px 10px rgba(0, 255, 255, 0.5);
+            background: #fff;
+            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
         }
 
         .w3-bar {
@@ -48,33 +49,36 @@
             font-weight: bold;
             padding: 1rem;
             text-transform: uppercase;
-            color: #0ff;
-            text-shadow: 1px 1px #000;
-            transition: background 0.3s, color 0.3s;
+            color: #f5b5d0; /* Soft pink */
+            text-shadow: 1px 1px rgba(0, 0, 0, 0.2);
+            transition: background 0.3s, color 0.3s, text-shadow 0.3s;
         }
 
         .w3-bar-item:hover {
-            background: #ff00ff;
-            color: white;
+            background: #f5b5d0;
+            color: #fff;
+            text-shadow: 0 0 10px #f5b5d0, 0 0 20px #f5b5d0;
+            cursor: pointer;
         }
 
         section {
-            margin: 2rem auto;
+            margin: 3rem auto;
             max-width: 900px;
             padding: 2rem;
-            background: #222;
-            border: 3px solid #0ff;
+            background: #fff;
+            border: 3px solid #f5b5d0;
             border-radius: 10px;
-            box-shadow: 0 10px 20px rgba(0, 255, 255, 0.5);
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+            position: relative;
         }
 
         section h2 {
-            font-family: 'Orbitron', sans-serif;
-            color: #ff00ff;
-            font-size: 2.2rem; /* Slightly larger for emphasis */
+            font-family: 'Lora', serif;
+            color: #f5b5d0;
+            font-size: 2.5rem;
             margin-bottom: 1rem;
-            font-weight: 700; /* Boldest weight for Orbitron */
-            text-shadow: 3px 3px #000;
+            font-weight: 600;
+            text-shadow: 1px 1px rgba(0, 0, 0, 0.1);
         }
 
         ul {
@@ -83,15 +87,17 @@
         }
 
         .w3-table-all {
-            border: 3px solid #0ff;
-            background: #111;
-            color: #0ff;
-            font-size: 0.9rem;
+            border: 3px solid #f5b5d0;
+            background: #f9f4f4;
+            color: #4a3f35;
+            font-size: 1rem;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
 
         .w3-table-all th {
-            background: #ff00ff;
-            color: white;
+            background: #f5b5d0;
+            color: #fff;
         }
 
         .w3-table-all td, .w3-table-all th {
@@ -100,63 +106,65 @@
         }
 
         .w3-table-all tr:nth-child(even) {
-            background: #333;
+            background: #f2e1e1;
         }
 
         img {
             display: block;
             margin: 1rem auto;
             border-radius: 10px;
-            border: 3px solid #0ff;
+            border: 3px solid #f5b5d0;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
 
         footer {
-            background: linear-gradient(90deg, #ff00ff, #00ffff);
-            color: white;
+            background: linear-gradient(90deg, #f5b5d0, #f2c5b3);
+            color: #4a3f35;
             text-align: center;
             padding: 1.5rem 0;
             margin-top: 2rem;
-            border-top: 5px solid #0ff;
+            border-top: 5px solid #f5b5d0;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
         footer p {
             margin: 0;
             font-size: 0.9rem;
-            text-shadow: 1px 1px #000;
+            text-shadow: 1px 1px rgba(0, 0, 0, 0.1);
         }
 
         @font-face {
-            font-family: 'Press Start 2P';
-            src: url('https://fonts.gstatic.com/s/pressstart2p/v12/e3t4euO8V5UmzJVzZPZsZnF1Q8jEMtyvq-o.woff2') format('woff2');
+            font-family: 'Lora';
+            src: url('https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap');
         }
 
-        @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
     </style>
 </head>
 <body>
     <header>
-        <h1>Ella's Game Portal</h1>
+        <h1>Ella's Personal Website</h1>
     </header>
 
     <nav class="w3-bar w3-border">
-        <a href="#about" class="w3-bar-item w3-button">About</a>
+        <a href="#about" class="w3-bar-item w3-button">About Me</a>
         <a href="#hobbies" class="w3-bar-item w3-button">Hobbies</a>
-        <a href="#projects" class="w3-bar-item w3-button">Projects</a>
+        <a href="#projects" class="w3-bar-item w3-button"> Projects</a>
         <a href="#contact" class="w3-bar-item w3-button">Contact</a>
     </nav>
 
     <section id="about">
         <h2>About Me</h2>
-        <img src="about-me.jpg" alt="A photo of me" style="width: 450px; height: 300px;">
-        <p>Welcome to my game-themed portal! I'm Ella, a passionate creator who loves doing passion projects and creativity. Let's explore!</p>
+        <img src="about-me.jpg" alt="A picture of me" style="width: 450px; height: 300px;">
+        <p>Welcome to my personal website! I'm Ella, a passionate cat lover and loves to be creative. Let's explore my world!</p>
     </section>
 
     <section id="hobbies">
         <h2>Hobbies</h2>
-        <img src="hobbies.jpg" alt="Image representing hobbies" style="width: 200px; height: 300px;">
-        <p>When I'm not gaming, I enjoy:</p>
+        <img src="hobbies.jpg" alt="Cat enjoying hobbies" style="width: 200px; height: 300px;">
+        <p>When I'm not busy, I enjoy:</p>
         <ul>
-            <li>Designing</li>
+            <li>Designing </li>
             <li>Video editing</li>
             <li>Playing video games</li>
             <li>Dancing!</li>
@@ -174,16 +182,16 @@
                     <th>Link</th>
                 </tr>
                 <tr>
-                    <td><img src="project1.jpg" alt="What Kind of Fool Am I" style="width: 150px; height: 100px;"></td>
-                    <td>What Kind of Fool Am I</td>
-                    <td>A self-choreographed solo in a virtual arena</td>
-                    <td><a href="https://youtu.be/nr6c-ypJx_w" style="color: #ff00ff;">Visit</a></td>
+                    <td><img src="project1.jpg" alt="Dance video" style="width: 150px; height: 100px;"></td>
+                    <td>Cat Yoga</td>
+                    <td>A self-choreographed solo</td>
+                    <td><a href="https://youtu.be/cat-yoga" style="color: #f5b5d0;">Watch</a></td>
                 </tr>
                 <tr>
-                    <td><img src="project2.jpg" alt="Moodbloom" style="width: 150px; height: 100px;"></td>
+                    <td><img src="project2.jpg" alt="Self-made App" style="width: 150px; height: 100px;"></td>
                     <td>Moodbloom</td>
-                    <td>A mood-tracking app to track your mood levels</td>
-                    <td><a href="https://www.figma.com/design/wYklmzNcksPWUzWinRUMZI/Li_Ella_M3?node-id=0-1&t=xtnZGUugjgjGLjCh-1" style="color: #ff00ff;">Visit</a></td>
+                    <td>An app to track your daily mood</td>
+                    <td><a href="https://www.figma.com/cattracker" style="color: #f5b5d0;">Visit</a></td>
                 </tr>
             </table>
         </div>
@@ -192,11 +200,11 @@
     <section id="contact">
         <h2>Contact</h2>
         <img src="contact.jpg" alt="Contact icon" style="width: 200px; height: 200px;">
-        <p>Get in touch with me at <a href="mailto:e225li@uwaterloo.ca" style="color: #ff00ff;">e225li@uwaterloo.ca</a></p>
+        <p>Get in touch with me at <a href="mailto:e225li@uwaterloo.ca" style="color: #f5b5d0;">e225li@uwaterloo.ca</a></p>
     </section>
 
     <footer>
-        <p>&copy; 2024 Ella's Game Portal</p>
+        <p>&copy; 2024 Ella's Personal Website</p>
     </footer>
 </body>
 </html>
