--- a/index.html
+++ b/index.html
@@ -3,33 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ella's Cat Portal</title>
+    <title>Ella's Game Portal</title>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <style>
         body {
-            font-family: 'Poppins', sans-serif;
-            background-color: #f4f1f1; /* Soft off-white background */
-            color: #4a3f35; /* Warm brown text color */
+            font-family: 'Lora', serif; /* Elegant serif font */
+            background: #f0f8ff; /* Light, calming background color */
+            color: #4a4a4a; /* Muted, readable text color */
             margin: 0;
             padding: 0;
+            line-height: 1.6;
         }
 
         header {
-            background: linear-gradient(90deg, #f5b5d0, #f2c5b3); /* Soft pink to beige gradient */
-            color: #4a3f35; /* Dark brown for text */
+            background: linear-gradient(135deg, #ffb3b3, #f6d3d3); /* Soft pastel pink gradient */
+            color: #4a4a4a;
             text-align: center;
             padding: 3rem 0;
-            border-bottom: 5px solid #f5b5d0; /* Soft pink border */
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-bottom: 3px solid #f6d3d3; /* Soft pastel border */
         }
 
         header h1 {
-            font-family: 'Lora', serif;
+            font-family: 'Lora', serif; /* Elegant serif font for a classy feel */
             font-size: 3.5rem;
             margin: 0;
             font-weight: 700;
-            color: #4a3f35;
-            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+            color: #4a4a4a;
         }
 
         nav {
@@ -43,61 +42,60 @@
         .w3-bar {
             display: flex;
             justify-content: center;
+            padding: 1.5rem 0;
         }
 
         .w3-bar-item {
-            font-weight: bold;
-            padding: 1rem;
+            font-weight: 600;
+            padding: 1.5rem;
             text-transform: uppercase;
-            color: #f5b5d0; /* Soft pink */
-            text-shadow: 1px 1px rgba(0, 0, 0, 0.2);
-            transition: background 0.3s, color 0.3s, text-shadow 0.3s;
+            color: #f28b82; /* Light coral color */
+            transition: background 0.3s, color 0.3s;
         }
 
         .w3-bar-item:hover {
-            background: #f5b5d0;
-            color: #fff;
-            text-shadow: 0 0 10px #f5b5d0, 0 0 20px #f5b5d0;
+            background: #f28b82;
+            color: white;
             cursor: pointer;
         }
 
         section {
-            margin: 3rem auto;
+            margin: 4rem auto;
             max-width: 900px;
             padding: 2rem;
             background: #fff;
-            border: 3px solid #f5b5d0;
-            border-radius: 10px;
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+            border: 2px solid #f6d3d3; /* Soft pastel border */
+            border-radius: 12px;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
             position: relative;
         }
 
         section h2 {
-            font-family: 'Lora', serif;
-            color: #f5b5d0;
+            font-family: 'Lora', serif; /* Elegant serif font for headings */
+            color: #f28b82;
             font-size: 2.5rem;
             margin-bottom: 1rem;
             font-weight: 600;
-            text-shadow: 1px 1px rgba(0, 0, 0, 0.1);
         }
 
         ul {
             list-style-type: square;
             padding-left: 1.5rem;
+            color: #4a4a4a;
         }
 
         .w3-table-all {
-            border: 3px solid #f5b5d0;
-            background: #f9f4f4;
-            color: #4a3f35;
+            border: 2px solid #f6d3d3;
+            background: #fafafa; /* Light gray background for table */
+            color: #4a4a4a;
             font-size: 1rem;
             border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
 
         .w3-table-all th {
-            background: #f5b5d0;
-            color: #fff;
+            background: #f28b82;
+            color: white;
         }
 
         .w3-table-all td, .w3-table-all th {
@@ -106,39 +104,34 @@
         }
 
         .w3-table-all tr:nth-child(even) {
-            background: #f2e1e1;
+            background: #f6f6f6; /* Light alternating row colors */
         }
 
         img {
             display: block;
             margin: 1rem auto;
-            border-radius: 10px;
-            border: 3px solid #f5b5d0;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 12px;
+            border: 3px solid #f28b82; /* Soft coral border around images */
         }
 
         footer {
-            background: linear-gradient(90deg, #f5b5d0, #f2c5b3);
-            color: #4a3f35;
+            background: linear-gradient(135deg, #ffb3b3, #f6d3d3);
+            color: #4a4a4a;
             text-align: center;
-            padding: 1.5rem 0;
+            padding: 2rem 0;
             margin-top: 2rem;
-            border-top: 5px solid #f5b5d0;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-top: 3px solid #f6d3d3;
         }
 
         footer p {
             margin: 0;
-            font-size: 0.9rem;
-            text-shadow: 1px 1px rgba(0, 0, 0, 0.1);
+            font-size: 1rem;
         }
 
         @font-face {
             font-family: 'Lora';
             src: url('https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap');
         }
-
-        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
     </style>
 </head>
 <body>
@@ -147,24 +140,24 @@
     </header>
 
     <nav class="w3-bar w3-border">
-        <a href="#about" class="w3-bar-item w3-button">About Me</a>
+        <a href="#about" class="w3-bar-item w3-button">About</a>
         <a href="#hobbies" class="w3-bar-item w3-button">Hobbies</a>
-        <a href="#projects" class="w3-bar-item w3-button"> Projects</a>
+        <a href="#projects" class="w3-bar-item w3-button">Projects</a>
         <a href="#contact" class="w3-bar-item w3-button">Contact</a>
     </nav>
 
     <section id="about">
         <h2>About Me</h2>
-        <img src="about-me.jpg" alt="A picture of me" style="width: 450px; height: 300px;">
-        <p>Welcome to my personal website! I'm Ella, a passionate cat lover and loves to be creative. Let's explore my world!</p>
+        <img src="about-me.jpg" alt="A photo of me" style="width: 450px; height: 300px;">
+        <p>Welcome to my game-themed portal! I'm Ella, a passionate creator who loves doing passion projects and creativity. Let's explore!</p>
     </section>
 
     <section id="hobbies">
         <h2>Hobbies</h2>
-        <img src="hobbies.jpg" alt="Cat enjoying hobbies" style="width: 200px; height: 300px;">
-        <p>When I'm not busy, I enjoy:</p>
+        <img src="hobbies.jpg" alt="Image representing hobbies" style="width: 200px; height: 300px;">
+        <p>When I'm not gaming, I enjoy:</p>
         <ul>
-            <li>Designing </li>
+            <li>Designing</li>
             <li>Video editing</li>
             <li>Playing video games</li>
             <li>Dancing!</li>
@@ -182,16 +175,16 @@
                     <th>Link</th>
                 </tr>
                 <tr>
-                    <td><img src="project1.jpg" alt="Dance video" style="width: 150px; height: 100px;"></td>
-                    <td>Cat Yoga</td>
-                    <td>A self-choreographed solo</td>
-                    <td><a href="https://youtu.be/cat-yoga" style="color: #f5b5d0;">Watch</a></td>
+                    <td><img src="project1.jpg" alt="What Kind of Fool Am I" style="width: 150px; height: 100px;"></td>
+                    <td>What Kind of Fool Am I</td>
+                    <td>A self-choreographed solo in a virtual arena</td>
+                    <td><a href="https://youtu.be/nr6c-ypJx_w" style="color: #f28b82;">Visit</a></td>
                 </tr>
                 <tr>
-                    <td><img src="project2.jpg" alt="Self-made App" style="width: 150px; height: 100px;"></td>
+                    <td><img src="project2.jpg" alt="Moodbloom" style="width: 150px; height: 100px;"></td>
                     <td>Moodbloom</td>
-                    <td>An app to track your daily mood</td>
-                    <td><a href="https://www.figma.com/cattracker" style="color: #f5b5d0;">Visit</a></td>
+                    <td>A mood-tracking app to track your mood levels</td>
+                    <td><a href="https://www.figma.com/design/wYklmzNcksPWUzWinRUMZI/Li_Ella_M3?node-id=0-1&t=xtnZGUugjgjGLjCh-1" style="color: #f28b82;">Visit</a></td>
                 </tr>
             </table>
         </div>
@@ -200,7 +193,7 @@
     <section id="contact">
         <h2>Contact</h2>
         <img src="contact.jpg" alt="Contact icon" style="width: 200px; height: 200px;">
-        <p>Get in touch with me at <a href="mailto:e225li@uwaterloo.ca" style="color: #f5b5d0;">e225li@uwaterloo.ca</a></p>
+        <p>Get in touch with me at <a href="mailto:e225li@uwaterloo.ca" style="color: #f28b82;">e225li@uwaterloo.ca</a></p>
     </section>
 
     <footer>
