--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ella's Game Portal</title>
+    <title>Ella's Personal Website</title>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <style>
         body {
@@ -136,7 +136,7 @@
 </head>
 <body>
     <header>
-        <h1>Ella's Personal Website</h1>
+        <h1>Welcome to Ella's Personal Website</h1>
     </header>
 
     <nav class="w3-bar w3-border">
