--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body {
             font-family: 'Lora', serif; /* Elegant serif font */
-            background: #f0f8ff; /* Light, calming background color */
+            background: linear-gradient(135deg, #eef2ff, #dfe7fd); /* Muted gradient with soft periwinkle tones */
             color: #4a4a4a; /* Muted, readable text color */
             margin: 0;
             padding: 0;
@@ -16,11 +16,12 @@
         }
 
         header {
-            background: linear-gradient(135deg, #ffb3b3, #f6d3d3); /* Soft pastel pink gradient */
+            background: linear-gradient(135deg, #a7c7e7, #cddffd); /* Soft periwinkle gradient */
             color: #4a4a4a;
             text-align: center;
             padding: 3rem 0;
-            border-bottom: 3px solid #f6d3d3; /* Soft pastel border */
+            border-bottom: 3px solid #a7c7e7; /* Periwinkle border */
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Soft shadow */
         }
 
         header h1 {
@@ -35,7 +36,7 @@
             position: sticky;
             top: 0;
             z-index: 1000;
-            background: #fff;
+            background: #f8f9ff; /* Light muted background for nav */
             box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
         }
 
@@ -49,12 +50,12 @@
             font-weight: 600;
             padding: 1.5rem;
             text-transform: uppercase;
-            color: #f28b82; /* Light coral color */
+            color: #5e81ac; /* Periwinkle accent color */
             transition: background 0.3s, color 0.3s;
         }
 
         .w3-bar-item:hover {
-            background: #f28b82;
+            background: #5e81ac;
             color: white;
             cursor: pointer;
         }
@@ -63,16 +64,16 @@
             margin: 4rem auto;
             max-width: 900px;
             padding: 2rem;
-            background: #fff;
-            border: 2px solid #f6d3d3; /* Soft pastel border */
+            background: #ffffff; /* White background for readability */
+            border: 2px solid #a7c7e7; /* Periwinkle border */
             border-radius: 12px;
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
             position: relative;
         }
 
         section h2 {
             font-family: 'Lora', serif; /* Elegant serif font for headings */
-            color: #f28b82;
+            color: #5e81ac;
             font-size: 2.5rem;
             margin-bottom: 1rem;
             font-weight: 600;
@@ -85,7 +86,7 @@
         }
 
         .w3-table-all {
-            border: 2px solid #f6d3d3;
+            border: 2px solid #a7c7e7; /* Periwinkle table border */
             background: #fafafa; /* Light gray background for table */
             color: #4a4a4a;
             font-size: 1rem;
@@ -94,7 +95,7 @@
         }
 
         .w3-table-all th {
-            background: #f28b82;
+            background: #5e81ac;
             color: white;
         }
 
@@ -111,16 +112,17 @@
             display: block;
             margin: 1rem auto;
             border-radius: 12px;
-            border: 3px solid #f28b82; /* Soft coral border around images */
+            border: 3px solid #5e81ac; /* Periwinkle border around images */
         }
 
         footer {
-            background: linear-gradient(135deg, #ffb3b3, #f6d3d3);
+            background: linear-gradient(135deg, #a7c7e7, #cddffd); /* Soft muted gradient for footer */
             color: #4a4a4a;
             text-align: center;
             padding: 2rem 0;
             margin-top: 2rem;
-            border-top: 3px solid #f6d3d3;
+            border-top: 3px solid #a7c7e7;
+            box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1); /* Soft shadow at the top of the footer */
         }
 
         footer p {
@@ -178,13 +180,13 @@
                     <td><img src="project1.jpg" alt="What Kind of Fool Am I" style="width: 150px; height: 100px;"></td>
                     <td>What Kind of Fool Am I</td>
                     <td>A self-choreographed solo in a virtual arena</td>
-                    <td><a href="https://youtu.be/nr6c-ypJx_w" style="color: #f28b82;">Visit</a></td>
+                    <td><a href="https://youtu.be/nr6c-ypJx_w" style="color: #5e81ac;">Visit</a></td>
                 </tr>
                 <tr>
                     <td><img src="project2.jpg" alt="Moodbloom" style="width: 150px; height: 100px;"></td>
                     <td>Moodbloom</td>
                     <td>A mood-tracking app to track your mood levels</td>
-                    <td><a href="https://www.figma.com/design/wYklmzNcksPWUzWinRUMZI/Li_Ella_M3?node-id=0-1&t=xtnZGUugjgjGLjCh-1" style="color: #f28b82;">Visit</a></td>
+                    <td><a href="https://www.figma.com/design/wYklmzNcksPWUzWinRUMZI/Li_Ella_M3?node-id=0-1&t=xtnZGUugjgjGLjCh-1" style="color: #5e81ac;">Visit</a></td>
                 </tr>
             </table>
         </div>
@@ -193,7 +195,7 @@
     <section id="contact">
         <h2>Contact</h2>
         <img src="contact.jpg" alt="Contact icon" style="width: 200px; height: 200px;">
-        <p>Get in touch with me at <a href="mailto:e225li@uwaterloo.ca" style="color: #f28b82;">e225li@uwaterloo.ca</a></p>
+        <p>Get in touch with me at <a href="mailto:e225li@uwaterloo.ca" style="color: #5e81ac;">e225li@uwaterloo.ca</a></p>
     </section>
 
     <footer>
