--- a/index.html
+++ b/index.html
@@ -154,17 +154,18 @@
         <p>Welcome to my game-themed portal! I'm Ella, a passionate creator who loves doing passion projects and creativity. Let's explore!</p>
     </section>
 
-    <section id="hobbies">
-        <h2>Hobbies</h2>
-        <img src="hobbies.jpg" alt="Image representing hobbies" style="width: 200px; height: 300px;">
-        <p>When I'm not gaming, I enjoy:</p>
-        <ul>
-            <li>Designing</li>
-            <li>Video editing</li>
-            <li>Playing video games</li>
-            <li>Dancing!</li>
-        </ul>
-    </section>
+    <section id="hobbies" style="overflow: hidden; font-size: 1.2rem;">
+    <h2>Hobbies</h2>
+    <img src="hobbies.jpg" alt="Image representing hobbies" 
+         style="width: 200px; height: 300px; border-radius: 12px; border: 3px solid #5e81ac; float: right; margin-left: 1.5rem; margin-bottom: 1rem;">
+    <p>When I'm not gaming, I enjoy:</p>
+    <ul>
+        <li>Designing</li>
+        <li>Video editing</li>
+        <li>Playing video games</li>
+        <li>Dancing!</li>
+    </ul>
+</section>
 
     <section id="projects">
         <h2>Projects</h2>
