--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             color: #4a4a4a;
             text-align: center;
             padding: 2rem 0;
-            margin-top: 2rem;
+            margin-top: auto;
             border-top: 3px solid #a7c7e7;
             box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1); 
         }
