--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <style>
         body {
-            font-family: 'Lora', serif; 
-            background: linear-gradient(135deg, #eef2ff, #dfe7fd); 
-            color: #4a4a4a; 
-            margin: 0;
-            padding: 0;
-            line-height: 1.6;
-        }
+    font-family: 'Lora', serif;
+    background: linear-gradient(135deg, #eef2ff, #dfe7fd);
+    color: #4a4a4a;
+    margin: 0;
+    padding: 0;
+    line-height: 1.6;
+}
 
         header {
             background: linear-gradient(135deg, #a7c7e7, #cddffd); 
@@ -117,14 +117,14 @@
         }
 
         footer {
-            background: linear-gradient(135deg, #a7c7e7, #cddffd); 
-            color: #4a4a4a;
-            text-align: center;
-            padding: 2rem 0;
-            margin-top: auto;
-            border-top: 3px solid #a7c7e7;
-            box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1); 
-        }
+    background: linear-gradient(135deg, #a7c7e7, #cddffd);
+    color: #4a4a4a;
+    text-align: center;
+    padding: 2rem 0;
+    margin-top: auto; /* Ensure footer stays at the bottom */
+    border-top: 3px solid #a7c7e7;
+    box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1);
+}
 
         footer p {
             margin: 0;
